# docs/swagger.yaml
@@ -24,6 +24,8 @@ definitions:
     type: object
   model.AndroidGroup:
     properties:
+      account_id:
+        type: string
       id:
         type: string
     type: object
@@ -119,4 +121,26 @@ paths:
       summary: Get details of an account
       tags:
       - accounts
+  /android_groups/{id}/androids:
+    post:
+      parameters:
+      - description: Android Group ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Android'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Create a new account
 swagger: "2.0"
