# handler/handler.go
@@ -30,7 +30,7 @@ func SetUpRouter() *gin.Engine {
 	r.POST("/accounts", CreateAccount)
 	r.DELETE("/accounts/:id", DeleteAccount)
 
-	r.POST("/accounts/:accountId/android_groups/:groupId", CreateAndroid)
+	r.POST("/android_groups/:id/androids", CreateAndroid)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
